# AdalFlow

./: .buildinfo  .env  .env.example  .env_example  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  6_shot_class_5_steps_llama_3_start_shot.txt  6_shot_random_5_steps_llama_3_start_shot.txt  6_shot_weighted_class.txt  6_shot_weighted_class_20_steps.txt  6_shot_weighted_class_20_steps_gemma.txt  6_shot_weighted_class_20_steps_gemma_2.txt  AUTO_RELEASE.md  CNAME  Dockerfile  FunctionTool.md  Makefile  NOTES.md  README.md  SETUP.md  architecture_generator.py  class_hierarchy_edges.csv  class_sampler_optimizer.py  class_sampler_optimizer.txt  class_sampler_optimizer_10.txt  class_sampler_optimizer_11.txt  class_sampler_optimizer_12.txt  class_sampler_optimizer_13.txt  class_sampler_optimizer_14.txt  class_sampler_optimizer_15.txt  class_sampler_optimizer_16.txt  class_sampler_optimizer_17.txt  class_sampler_optimizer_19.txt  class_sampler_optimizer_2.txt  class_sampler_optimizer_3.txt  community.html  compare_structured_output.py  dataset.py  (+41 more)
adalflow/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  PACKAGING.md  README.md  api_approval_examples.md  pyproject.toml
adalflow/adalflow/: __init__.py
adalflow/adalflow/apps/: cli_permission_handler.py  fastapi_permission_handler.py  permission_manager.py
adalflow/adalflow/components/: __init__.py
adalflow/adalflow/core/: README.md  __init__.py  agent.py  agent.py   base_data_class.py  component.py  container.py  db.py  default_prompt_template.py  embedder.py  func_tool.py  functional.py  generator.py  grad_component.py  mcp_tool.py  model_client.py  multirunner.py  permission_manager.py  prompt_builder.py  retriever.py  runner.py  string_parser.py  tokenizer.py  tool_manager.py  types.py
adalflow/adalflow/database/: README.md
adalflow/adalflow/datasets/: __init__.py  big_bench_hard.py  gsm8k.py  hotpot_qa.py  trec.py  types.py  utils.py
adalflow/adalflow/eval/: __init__.py  answer_match_acc.py  base.py  functional.py  g_eval.py  llm_as_judge.py  retriever_recall.py  retriever_relevance.py  utils.py
adalflow/adalflow/icl/: retrieval_icl.py
adalflow/adalflow/optim/: README.md  __init__.py  _llm_optimizer.py  function.py  grad_component.py  gradient.py  loss_component.py  optimizer.py  parameter.py  sampler.py  types.py
adalflow/adalflow/tools/: __init__.py
adalflow/adalflow/tracing/: __init__.py  callback_manager.py  util.py  (+11 more)
adalflow/tests/: README.md  _test_optimizer.py  _test_sampler.py  test_AzureClient.py  test_agent.py  test_anthropic_client.py  test_aws_bedrock_client.py  test_azure_client.py  test_base_data_class.py  test_chat_completion_to_response_converter.py  test_component.py  test_componentlist.py  test_constrained_parser.py  test_data.py  test_data_class_parser.py  test_data_classes.py  test_data_loader.py  test_dataclass_object_functions.py  test_deepseek_client.py  test_evaluators.py  test_faiss_retriever.py  test_fastapi_permission_handler.py  test_flexible_memory.py  test_flexible_memory_template.py  test_function_expression_parse.py  test_generator.py  test_generator_call_logger.py  test_generator_image_saving.py  test_google_ai_client.py  test_grad_component.py  test_groq_client.py  test_lancedb_retriver.py  test_lazy_import.py  test_llm_retriever.py  test_local_db.py  test_logger.py  test_logprob_support.py  test_mcp_tool.py  test_memory.py  test_model_client.py  (+25 more)
adalflow/tutorials/: adalflow_dataclasses.py  adalflow_text_splitter.py
docs/: .gitignore  CHANGLOG.md  Makefile  README.md  components.api_client.rst  conf.py  core.rst  datasets_benchmarks.md  index.rst  modules.rst  pyproject.toml  requirements.txt  tests.rst  tests.txt
docs/design/: ComponentTool.md  FunctionTool.md  adalflow_agent_streaming.md  agent-streaming.md  tool_approval.md  tool_approval_design.md
docs/source/: add_function_descriptions_table.py  change_api_file_name.py  conf.py  generate_autosummary.py  index.rst  insert_autosummary.py  insert_labels.py  remove_duplicated_files.py  remove_files.py  remove_string.py
lightrag/: .gitignore  CHANGELOG.md  PACKAGING.md  README.md  bm25_index.json  light_rag.py  pyproject.toml  pytest.ini  string_parser.py  test.py  tests.txt  text_lightrag.txt  tool.py  tool_helper.py
lightrag/core/: __init__.py  api_client.py  base_data_class.py  component.py  data_classes.py  data_components.py  db.py  default_prompt_template.py  document_splitter.py  document_splitter_optim.py  embedder.py  func_tool.py  functional.py  generator.py  memory.py  model_client.py  parameter.py  prompt_builder.py  retriever.py  string_parser.py  text_splitter.py  tokenizer.py  tool_helper.py  tool_manager.py  types.py
lightrag/eval/: __init__.py  answer_match_evaluator.py  evaluators.py  llm_as_judge.py  llm_as_judge_evaluator.py  retriever_evaluator.py
lightrag/icl/: retrieval_icl.py
lightrag/lightrag/: __init__.py
lightrag/optim/: few_shot_optimizer.py  llm_augment.py  llm_optimizer.py
lightrag/prompts/: outputs.py
lightrag/tests/: README.md  _test_openai_client.py  _test_optimizer.py  _test_sampler.py  test_base_data_class.py  test_component.py  test_data.py  test_data_classes.py  test_dataclass_object_functions.py  test_document_splitter.py  test_evaluators.py  test_faiss_retriever.py  test_function_expression_parse.py  test_generator.py  test_generator_async.py  test_generator_call_logger.py  test_google_ai_client.py  test_groq_client.py  test_gt_text_splitter.py  test_lazy_import.py  test_litellm_class.py  test_llm_retriever.py  test_logger.py  test_model_client.py  test_ollama_async_client.py  test_ollama_client.py  test_openai_client.py  test_optimizer.py  test_output_parser.py  test_parameter.py  test_parameter_text_grad.py  test_sampler.py  test_sequential.py  test_string_parser.py  test_text_splitter.py  test_tool.py  test_trainer.py  test_transformer_client.py
lightrag/tracing/: decorators.py  generator_call_logger.py  generator_state_logger.py
lightrag/utils/: __init__.py  config.py  file_io.py  lazy_import.py  logger.py  registry.py  serialization.py
(+2145 files in other folders)
