
[tool.poetry]
name = "adalflow-project"
version = "0.1.0"
description = "A project to develop and test the adalflow library"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

packages = [
    { from = ".", include = "use_cases" },
    { from = ".", include = "tutorials" },
    { from = ".", include = "benchmarks" },
]

# if you cant import package, use export PYTHONPATH=$(pwd):$PYTHONPATH

[tool.poetry.dependencies]
python = ">=3.11, <4.0"
adalflow = { path = "adalflow", develop = true }
black = { extras = ["jupyter"], version = "^24.10.0" }
aioitertools = "^0.12.0"
asyncstdlib = "^3.13.1"

[tool.poetry.group.dev.dependencies]

pre-commit = "^3.7.0"
anthropic = "^0.55.0"
torchmetrics = "^1.4.0.post0"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
dataclasses-jsonschema = "^2.16.0"
groq = "^0.9.0"
pgvector = "^0.2.5"
cohere = "^5.5.8"
pydot = "^2.0.0"
matplotlib = "^3.9.0"
ollama = "^0.2.1"
torch = ">=2.0, <3.0"
textgrad = "^0.1.4"
tensorboardx = "^2.6.2.2"
tensorboard = "^2.17.0"
dspy = { version = "^2.6.27", markers = "python_version < '3.14'" }
dspy-ai = { version = "^2.6.27", markers = "python_version < '3.14'" }
mlflow = "^3.1.4"
aioconsole = "^0.8.1"
boto3 = "^1.39.15"
azure-identity = "^1.23.1"
azure-core = "^1.35.0"
azure-ai-formrecognizer = "^3.3.3"
azure-ai-textanalytics = "^5.3.0"


transformers = "^4.44.0"
accelerate = "^0.33.0"
faiss-cpu = "^1.8.0.post1"
nltk = "^3.9.1"
ragas = "^0.1.16"
colorama = "^0.4.6"
black = "^24.10.0"
ruff = "^0.8.0"
google-generativeai = "^0.8.3"
together = "^1.3.14"
mistralai = "1.5.0"
fireworks-ai = "0.15.12"
mcp = "^1.9.4"
openai = "^1.97.1"
openai-agents = "^0.0.19"



[tool.poetry.group.test.dependencies]
pytest-mock = "^3.15.1"
lancedb = "^0.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# for formatting and linting
[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
lint.extend-ignore = [
    "E402",  # Ignore module-level import issues
    "E731",
    "UP007", # Wants | over Union, which breaks 3.8
]
line-length = 88
