[tool.poetry]
name = "lightrag-docs"
version = "0.1.0"
description = "Documentation for the lightrag project"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
packages = [{ from = "_dummy", include = "dummy" }]    # empty packages

[tool.poetry.dependencies]
python = ">=3.11, <4.0"
lightrag = { path = "../lightrag", develop = true } # document always follow the latest version of the library

[tool.poetry.group.doc.dependencies]
pydata-sphinx-theme = "^0.15.3"
sphinx-design = "^0.6.0"
sphinx-copybutton = "^0.5.2"
sphinx = "^7.3.7"
nbsphinx = "^0.9.4"
nbconvert = "^7.16.4"
pandoc = "^2.3"
readthedocs-sphinx-search = "^0.3.2"
# add optional packages to compile the documents correctly
sqlalchemy = "^2.0.31"
google-generativeai = "^0.7.1"
anthropic = "^0.30.1"
cohere = "^5.5.8"
transformers = "^4.42.3"
openai = "^1.35.12"
groq = "^0.9.0"
pgvector = "^0.3.0"
faiss-cpu = "^1.8.0.post1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
