[tool.poetry]
name = "adalflow-docs"
version = "0.0.0.beta.1"
description = "Documentation for the adalflow project"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
packages = [{ from = "_dummy", include = "dummy" }]    # empty packages

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
adalflow = { path = "../adalflow", develop = true } # document always follow the latest version of the library
pyvis = "^0.3.2"


[tool.poetry.group.doc.dependencies]
pydata-sphinx-theme = "^0.15.3"
sphinx-design = "^0.6.0"
sphinx-copybutton = "^0.5.2"
sphinx = "^7.3.7"
nbsphinx = "^0.9.4"
nbconvert = "^7.16.4"
pandoc = "^2.3"
readthedocs-sphinx-search = "^0.3.2"
# add optional packages to compile the documents correctly
datasets = "^2.20.0"
sqlalchemy = "^2.0.31"
google-generativeai = "^0.7.1"
anthropic = "^0.30.1"
cohere = "^5.5.8"
transformers = "^4.42.3"
openai = "^1.35.12"
groq = "^0.9.0"
pgvector = "^0.3.0"
faiss-cpu = "^1.8.0.post1"
ollama = "^0.3.0"
qdrant-client = "^1.10.1"
lancedb = "^0.14.0"
diskcache = "^5.6.3"
torch = "^2.4.0"

# azure model_client
azure-identity = "^1.18.0"
azure-core = "^1.31.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
