[tool.poetry]
name = "adalflow-docs"
version = "0.0.0.beta.1"
description = "Documentation for the adalflow project"
authors = [
    "Li Yin <li@sylph.ai>",
    "Nicholas Fleischhauer <nicholas@sylphai.com>",
]
license = "MIT"
packages = [{ from = "_dummy", include = "dummy" }] # empty packages

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
adalflow = { path = "../adalflow", develop = true } # Follow latest adalflow version
pyvis = "^0.3.2"
sphinx-tabs = "^3.4.7"
furo = "^2024.8.6"
sphinxcontrib-mermaid = "^1.0.0"

[tool.poetry.group.doc.dependencies]
# Sphinx documentation dependencies
sphinx = "^7.3.7"
pydata-sphinx-theme = "^0.15.3"
sphinx-design = "^0.6.0"
sphinx-copybutton = "^0.5.2"
nbsphinx = "^0.9.4"
nbconvert = "^7.16.4"
pandoc = "^2.3"
readthedocs-sphinx-search = "^0.3.2"

# Additional dependencies for document compilation
datasets = "^2.20.0"
sqlalchemy = "^2.0.31"
google-generativeai = "^0.7.1"
anthropic = "^0.55.0"
cohere = "^5.5.8"
transformers = "^4.42.3"
openai = "^1.35.12"
groq = "^0.9.0"
pgvector = "^0.3.0"
faiss-cpu = "^1.8.0.post1"
ollama = "^0.3.0"
qdrant-client = "^1.10.1"
lancedb = "^0.14.0"
diskcache = "^5.6.3"
torch = "^2.4.0"

# Azure client dependencies
azure-identity = "^1.18.0"
azure-core = "^1.31.0"
myst-parser = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
