[tool.poetry]
name = "lightrag"

packages = [
    { include = "core", from = "." },
    { include = "components", from = "." },
    { include = "eval", from = "." },
    { include = "utils", from = "." },
    { include = "tracing", from = "." },
    { include = "optim", from = "." },
    { include = "icl", from = "." },
]
version = "0.1.0"
description = "The 'PyTorch' library for LLM applications. RAG=Retriever-Agent-Generator."
authors = ["Li Yin <li.yin.gravity@gmail.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


[tool.poetry.dependencies]
python = ">=3.10, <4.0"

python-dotenv = "^1.0.1"
backoff = "^2.2.1"
jinja2 = "^3.1.3"
jsonlines = "^4.0.0"
tiktoken = "^0.7.0"
numpy = "^1.26.4"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-mock = "^3.14.0"
transformers = "^4.41.2"
torch = "^2.3.1"

[tool.poetry.group.typing.dependencies]
mypy = "^1"
types-pyyaml = "^6.0.12.20240311" # for mypy


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
openai = "^1.12.0"
groq = "^0.5.0"        # should only be installed if groq client is used
faiss-cpu = "^1.8.0"
sqlalchemy = "^2.0.30"

[tool.ruff]
exclude = ["images"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
