[tool.poetry]
name = "lightrag"

version = "0.0.0-alpha.11"
description = "The 'PyTorch' library for LLM applications. RAG=Retriever-Agent-Generator."
authors = ["Li Yin <li@sylphai.com>"]
readme = "README.md"
repository = "https://github.com/SylphAI-Inc/LightRAG"

license = "MIT"
maintainers = ["Xiaoyi Gu <xiaoyi@sylphai.com>", "Li Yin <li@sylphai.com>"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
keywords = ["LLM", "NLP", "RAG", "devtools", "retrieval", "agent"]

include = [
    "lightrag/core/*",
    "lightrag/components/*",
    "lightrag/eval/*",
    "lightrag/utils/*",
    "lightrag/tracing/*",
    "lightrag/optim/*",
    # "lightrag/icl/*",
]


packages = [{ include = "lightrag", from = "." }]


[tool.poetry.dependencies]
python = ">=3.10, <4.0"

python-dotenv = "^1.0.1"
backoff = "^2.2.1"
jinja2 = "^3.1.3"
jsonlines = "^4.0.0"
tiktoken = "^0.7.0"
numpy = "^1.26.4"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-mock = "^3.14.0"
transformers = "^4.41.2"
torch = "^2.3.1"

[tool.poetry.group.typing.dependencies]
mypy = "^1"
types-pyyaml = "^6.0.12.20240311" # for mypy


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
openai = "^1.12.0"
groq = "^0.5.0"        # should only be installed if groq client is used
faiss-cpu = "^1.8.0"
sqlalchemy = "^2.0.30"


[tool.ruff]
exclude = ["images"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
