[tool.poetry]
name = "lightrag"

version = "0.1.0-beta.2"
description = "The Lightning Library for LLM Applications."
authors = ["Li Yin <li@sylphai.com>"]
readme = "README.md"
repository = "https://github.com/SylphAI-Inc/LightRAG"

license = "MIT"
maintainers = ["Xiaoyi Gu <xiaoyi@sylphai.com>", "Li Yin <li@sylphai.com>"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
keywords = ["LLM", "NLP", "RAG", "devtools", "retrieval", "agent"]

include = [
    "lightrag/core/*",
    "lightrag/components/*",
    "lightrag/eval/*",
    "lightrag/utils/*",
    "lightrag/tracing/*",
    "lightrag/optim/*",
    # "lightrag/icl/*",
]


packages = [{ include = "lightrag", from = "." }]


[tool.poetry.dependencies]
python = ">=3.9, <4.0"

python-dotenv = "^1.0.1"
backoff = "^2.2.1"
jinja2 = "^3.1.3"
jsonlines = "^4.0.0"
tiktoken = "^0.7.0"
numpy = "^1.26.4"
tqdm = "^4.66.4"
pyyaml = "^6.0.1"

# Optional dependencies
openai = { version = "^1.12.0", optional = true }
groq = { version = "^0.5.0", optional = true }
faiss-cpu = { version = "^1.8.0", optional = true }
sqlalchemy = { version = "^2.0.30", optional = true }
pgvector = { version = "^0.3.1", optional = true }
torch = { version = "^2.3.1", optional = true }
anthropic = { version = "^0.31.1", optional = true }
google-generativeai = { version = "^0.7.2", optional = true }
cohere = { version = "^5.5.8", optional = true }


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-mock = "^3.14.0"
torch = "^2.3.1"
faiss-cpu = "^1.8.0"
openai = "^1.12.0"


[tool.poetry.group.typing.dependencies]
mypy = "^1"
types-pyyaml = "^6.0.12.20240311" # for mypy


[tool.poetry.group.dev.dependencies] # specify the versions for extras
pre-commit = "^3.7.0"


[tool.poetry.extras] # allow pip install lightrag[openai, groq]
openai = ["openai"]
groq = ["groq"]
anthropic = ["anthropic"]
cohere = ["cohere"]
google-generativeai = ["google-generativeai"]
pgvector = ["pgvector"]
faiss-cpu = ["faiss-cpu"]
sqlalchemy = ["sqlalchemy"]
torch = ["torch"]


[tool.ruff]
exclude = ["images"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
